--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             align-items: center;
             justify-content: center;
             position: relative;
-            padding: 6rem 2rem 2rem;
+            padding: 2rem 2rem 2rem;
         }
 
         .hero-content {
@@ -870,6 +870,43 @@
             display: none;
         }
 
+        /* News Banner - Full Width Compact */
+        .news-banner:hover {
+            background: linear-gradient(135deg, rgba(0, 255, 136, 0.1), rgba(0, 212, 255, 0.05));
+            border-bottom-color: var(--neon-green);
+        }
+
+        .news-banner a:hover span:last-child {
+            background: var(--neon-blue);
+            color: var(--primary-dark);
+            transform: scale(1.05);
+        }
+
+        /* News Section */
+        .news-section {
+            text-align: center;
+            max-width: 600px;
+            margin: 3rem auto 2rem;
+        }
+
+        .news-item {
+            transition: all 0.3s ease;
+        }
+
+        .news-item:hover {
+            transform: translateY(-2px);
+            border-color: var(--neon-green);
+            box-shadow: 0 10px 30px rgba(0, 255, 136, 0.15);
+        }
+
+        .news-item a:hover h4 {
+            color: var(--neon-blue);
+        }
+
+        .news-item a:hover span {
+            color: var(--neon-green);
+        }
+
         /* Mobile Responsive */
         @media (max-width: 768px) {
             nav {
@@ -916,6 +953,27 @@
                 align-items: center;
             }
             
+            /* News banner mobile */
+            .news-banner {
+                padding: 0.75rem 1rem;
+                margin-top: 4rem;
+            }
+
+            .news-banner div[style*="display: flex"] {
+                flex-direction: column;
+                gap: 0.5rem;
+                text-align: center;
+            }
+
+            .hero {
+                padding: 1rem 1rem 2rem;
+            }
+
+            /* News section on mobile */
+            .news-section {
+                margin: 2rem 1rem 1.5rem;
+            }
+
             /* Show mobile social section on mobile */
             .mobile-social-section {
                 display: block;
@@ -1205,11 +1263,23 @@
         </nav>
     </header>
 
+    <!-- In the News Banner - Full Width -->
+    <div class="news-banner" style="background: linear-gradient(135deg, var(--glass-bg), rgba(0, 255, 136, 0.05)); backdrop-filter: blur(20px); border-bottom: 1px solid var(--glass-border); padding: 1rem 2rem; margin-top: 5rem; position: relative; z-index: 999; transition: all 0.3s ease;">
+        <a href="https://theopenletter.io/p/getting-smes-paid-on-time" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: inherit; display: block;">
+            <div style="display: flex; align-items: center; justify-content: center; gap: 1rem; flex-wrap: wrap; text-align: center;">
+                <span style="color: var(--neon-green); font-size: 0.9rem; font-weight: 600;">📰 IN THE NEWS:</span>
+                <span style="color: var(--text-light); font-weight: 600; font-size: 1rem;">"Get Paid in Your Bakkie" - The Open Letter Feature</span>
+                <span style="color: var(--neon-blue); font-size: 0.9rem; font-weight: 500; padding: 0.3rem 0.8rem; border: 1px solid var(--neon-blue); border-radius: 15px; transition: all 0.3s ease;">
+                    Read Article →
+                </span>
+            </div>
+        </a>
+    </div>
 
     <section class="hero">
         <div class="hero-content">
             <!-- <div class="hero-badge">🚀 Revolutionary AI Invoicing</div> -->
-            <h1>cmdsharp - command your invoicing</h1>
+            <h1>CmdSharp - command your invoicing</h1>
             <p class="hero-subtitle">
                 Create professional invoices in 6-11 seconds with voice commands and intelligent shortcuts. 
                 The future of business automation is here.
