--- a/download.html
+++ b/download.html
@@ -586,6 +586,7 @@
                     <div class="warning-box">
                         <strong>Need Help?</strong>
                         If you see a security warning, it's normal for apps outside Play Store. Just tap "Settings" and enable "Allow from this source" - CmdSharp is 100% safe and this only needs to be done once.
+                        support@proviska.com
                     </div>
                 </div>
                 
