--- a/index.html
+++ b/index.html
@@ -1676,6 +1676,11 @@
                 <h4>Legal</h4>
                 <a href="/privacy.html">Privacy Policy</a>
                 <a href="/terms.html">Terms of Service</a>
+                            <a href="https://websitebootcamp.co.za/?utm_source=client_site&utm_medium=badge&utm_campaign=bootcamped"
+            target="_blank" rel="noopener"
+            aria-label="Optimised by Website Bootcamp">
+            <img src="bootcamped-pill.svg" alt="Bootcamped by Website Bootcamp" width="160" height="36" loading="lazy" decoding="async">
+            </a>
             </div>
         </div>
         
