--- a/index.html
+++ b/index.html
@@ -246,12 +246,12 @@
 
         /* Hero Section */
         .hero {
-            min-height: 100vh;
+            min-height: 80vh;
             display: flex;
             align-items: center;
             justify-content: center;
             position: relative;
-            padding: 2rem 2rem 2rem;
+            padding: 1rem 2rem 2rem;
         }
 
         .hero-content {
@@ -961,7 +961,7 @@
             }
             
             .hero {
-                padding: 4rem 1rem 2rem;
+                padding: 1rem 1rem 2rem;
             }
             
             .cta-buttons {
@@ -1358,6 +1358,17 @@
                 </span>
             </div>
         </a>
+    </div>
+
+    <!-- Beta Testing Banner -->
+    <div class="news-banner" style="background: linear-gradient(135deg, rgba(139, 92, 246, 0.1), rgba(0, 212, 255, 0.05)); backdrop-filter: blur(20px); border-bottom: 1px solid var(--glass-border); padding: 1rem 2rem; position: relative; z-index: 999; transition: all 0.3s ease;">
+        <div style="display: flex; align-items: center; justify-content: center; gap: 1rem; flex-wrap: wrap; text-align: center;">
+            <span style="color: var(--neon-purple); font-size: 0.9rem; font-weight: 600;">🎮 GOOGLE PLAY STORE:</span>
+            <span style="color: var(--text-light); font-weight: 600; font-size: 1rem;">Beta Testing • Expected September 2025</span>
+            <a href="#pricing" style="color: var(--neon-green); font-size: 0.9rem; font-weight: 500; padding: 0.3rem 0.8rem; border: 1px solid var(--neon-green); border-radius: 15px; transition: all 0.3s ease; text-decoration: none;">
+                Notify Me →
+            </a>
+        </div>
     </div>
 
     <section class="hero">
