--- a/index.html
+++ b/index.html
@@ -1376,9 +1376,16 @@
             <!-- <div class="hero-badge">🚀 Revolutionary AI Invoicing</div> -->
             <h1>CmdSharp - command your invoicing</h1>
             <p class="hero-subtitle">
-                Create professional invoices in 6-11 seconds with voice commands and intelligent shortcuts. 
+                Create professional invoices in 6-11 seconds with voice commands and intelligent shortcuts.
                 The future of business automation is here.
             </p>
+
+            <div class="vision-statement" style="background: var(--glass-bg); backdrop-filter: blur(20px); border: 1px solid var(--glass-border); border-radius: 15px; padding: 1.5rem; margin: 2rem 0; position: relative; overflow: hidden;">
+                <div style="position: absolute; top: 0; left: 0; right: 0; height: 2px; background: linear-gradient(90deg, transparent, var(--neon-blue), transparent); opacity: 0.8;"></div>
+                <p style="color: var(--text-light); font-size: 1.1rem; line-height: 1.6; margin: 0; font-weight: 500;">
+                    CmdSharp started as the fastest way to create invoices. But soon, it will do much more — helping you understand your business, find new clients, and grow smarter with AI.
+                </p>
+            </div>
             
             <div class="command-showcase">
                 <p style="margin-bottom: 1rem; color: var(--text-muted);">Just say or type:</p>
