Deleted data policy

--- a/index.html
+++ b/index.html
@@ -1787,6 +1787,7 @@
                             <a href="https://websitebootcamp.co.za/?utm_source=client_site&utm_medium=badge&utm_campaign=bootcamped"
             target="_blank" rel="noopener"
             aria-label="Optimised by Website Bootcamp">
+            <a href="/delete-data.html">Request to delete data</a>
             <img src="bootcamped-pill.svg" alt="Bootcamped by Website Bootcamp" width="160" height="36" loading="lazy" decoding="async">
             </a>
             </div>
