--- a/download.html
+++ b/download.html
@@ -509,8 +509,8 @@
                 <li><a href="index.html#pricing">Pricing</a></li>
                 <li><a href="index.html#how-it-works">How It Works</a></li>
                 <li>
-                    <a href="download.html" class="btn btn-primary" style="color: var(--primary-dark); padding: 0.6rem 1.2rem; font-size: 0.9rem;">
-                        Try Free
+                    <a href="https://play.google.com/store/apps/details?id=com.proviska.cmdsharp" target="_blank" style="display: inline-block;" onmouseover="this.querySelector('img').style.transform='scale(1.05)'" onmouseout="this.querySelector('img').style.transform='scale(1)'">
+                        <img src="images/google-play.png" alt="Get it on Google Play" style="height: 32px; transition: transform 0.2s ease;">
                     </a>
                 </li>
             </ul>
@@ -533,9 +533,9 @@
 
         <div class="download-container">
             <div class="download-content">
-                <div class="section-badge">📱 Mobile-First Invoicing</div>
+                <div class="section-badge">⚡ 6-Second Invoicing</div>
                 <h1 class="download-title">Stop Losing Money While Customers Wait for Invoices</h1>
-                <p class="download-subtitle">Send professional invoices in 30 seconds - right from your phone, right after the job</p>
+                <p class="download-subtitle">Generate professional invoices in just <strong style="color: var(--neon-green);">6 seconds</strong> - right from your phone, right after the job</p>
 
                 <!-- Problem Section -->
                 <div class="problem-card glass" style="margin-bottom: 2rem; padding: 2rem; border-left: 4px solid #ff6b6b;">
@@ -553,7 +553,7 @@
                 <!-- Solution Section -->
                 <div class="download-card" style="border-left: 4px solid var(--neon-green);">
                     <h3 style="color: var(--neon-green); margin-bottom: 1.5rem; font-size: 1.3rem;">
-                        ✅ The Solution: Professional Invoices in 30 Seconds
+                        ✅ The Solution: Professional Invoices in 6 Seconds
                     </h3>
                     <ul class="features-list">
                         <li><strong>Voice Commands:</strong> "Invoice John for $150 plumbing repair" - Done!</li>
@@ -601,7 +601,7 @@
                             <ul style="list-style: none; margin: 0; padding: 0; color: var(--text-muted);">
                                 <li style="margin-bottom: 0.75rem; padding-left: 1.5rem; position: relative;">
                                     <span style="position: absolute; left: 0;">⚡</span>
-                                    30 seconds per invoice
+                                    6 seconds per invoice
                                 </li>
                                 <li style="margin-bottom: 0.75rem; padding-left: 1.5rem; position: relative;">
                                     <span style="position: absolute; left: 0;">📱</span>
